# gomoku

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  codspeed.yml
benches/: engine.rs
examples/: bench.rs  demo.rs
scripts/: check_criterion_regression.py
src/: board.rs  error.rs  game.rs  lib.rs  point.rs  serialize.rs  stone.rs
src/rules/: capture.rs  mod.rs  opening.rs  renju.rs  win.rs
tests/: caro.rs  omok.rs  openings.rs  pente.rs  renju.rs  rules.rs  standard.rs  thread_safety.rs
