[package]
name = "gomoku"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Loki <loki@lksen.com>"]
description = "A fast, zero-dependency game and rule handler for all rulesets of gomoku narabe."
license = "LGPL-2.1-only"
repository = "https://github.com/lkse/gomoku"
readme = "README.md"
keywords = ["gomoku", "renju", "game", "board-game", "rules"]
categories = ["games", "game-development"]

# Document every feature on docs.rs (currently none, but future-proofs the build).
[package.metadata.docs.rs]
all-features = true

[dependencies]

[lib]
# Don't run the unit-test harness under `cargo bench`; benchmarks live in benches/.
bench = false

# Dev-only: the published library still has zero runtime dependencies.
# `codspeed-criterion-compat` is a drop-in for `criterion`: plain `cargo bench`
# behaves exactly like criterion, while `cargo codspeed` runs the same benches
# under instrumentation for deterministic, load-independent measurement in CI.
[dev-dependencies]
codspeed-criterion-compat = { version = "4.7.0", default-features = false }

[[bench]]
name = "engine"
harness = false

[profile.release]
lto = true
codegen-units = 1
